--- a/lab07/styles.css
+++ b/lab07/styles.css
@@ -2,18 +2,25 @@ body {
     color: #fcdada;
     background-color: #3d7ea6;
 }
-
+ 
 a:link {
     color: #ffa5a5;
 }
-
+ 
+h1, h2 {
+    color: #fcdada;
+}
+ 
 nav a:hover {
     background-color: #b2deec;
 }
-
+ 
+nav a {
+    color: #ffa5a5;
+}
+ 
 nav {
     padding: 10px;
     margin-bottom: 30px;
-    color: #fadcaa;
     background-color: #5c969e;
 }
