--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -2,27 +2,31 @@ body {
     color: #fcdada;
     background-color: #3d7ea6;
 }
- 
+
 a:link {
     color: #ffa5a5;
 }
- 
+
 h1, h2 {
     color: #fcdada;
 }
- 
+
 nav a:hover {
     background-color: #b2deec;
 }
- 
+
 nav a {
     color: #ffa5a5;
 }
- 
+
 nav {
     padding: 10px;
     margin-bottom: 30px;
     background-color: #5c969e;
+}
+
+.copyright {
+    float: left;
 }
 
 .quote {
@@ -31,4 +35,9 @@ nav {
 
 .clear {
     clear: both;
+}
+
+.img1 {
+    float: right;
+    margin-left: 30px;
 }
