--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -47,29 +47,26 @@ nav {
 }
 
 .contact section {
+    display: flex;
     padding: 10px;
 }
 
 .sec1, .sec2 {
     background-color: #cce5ff; 
     border-radius: 1em;
-    display: flex;
     margin: 10px;
 }
 
-.address {
-    order: 1;
+.sec1 .address {
     float: left;
     margin: 10px;
     padding: 20px;
-    flex: 1;
 }
 
-.links {
-    order: 2;
+.sec1 .links {
+    float: left;
     margin: 10px;
     padding: 20px;
-    flex: 1;
 }
 
 .forms {
@@ -85,4 +82,4 @@ nav {
     order: 2;
     padding: 20px;
     margin: 10px;
-} 
+}
