--- a/finalproject/styles.css
+++ b/finalproject/styles.css
@@ -18,6 +18,10 @@ body {
 h1, h2 {
         font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
+p {
+    font-family: 'Open Sans', sans-serif;
+}
  
 nav a:hover {
     background-color: #d400ff;
